<resources>
    <string name="app_name_release">PlayChat</string>
    <string name="playfun_local_language">en-US</string>
    <string name="playfun_local_language_val">en</string>
    <string name="playfun_title_home">Home</string>
    <string name="playfun_title_notifications">Message</string>
    <string name="playfun_title_mine">Me</string>
    <string name="playfun_toast_certification">Please pass the real person verification before withdrawing money.</string>
    <string name="playfun_face_detect_auth_begin_ok">Start verifying</string>
    <string name="playfun_face_detect_dialog_btn_sure">Confirm</string>
    <string name="playfun_tab_female_1">Nearby</string>
    <string name="playfun_tab_female_2">New users</string>
    <string name="playfun_tab_female_3">Queen</string>
    <string name="playfun_tab_male_1">Nearby</string>
    <string name="playfun_tab_male_2">VIP</string>
    <string name="playfun_tab_male_3">Active</string>
    <string name="playfun_tab_message_1">Chat</string>
    <string name="playfun_tab_message_2">System Messages</string>
    <string name="playfun_tab_message_3">Contact</string>
    <string name="playfun_tab_wallet_1">Cash</string>
    <string name="playfun_tab_wallet_2">Diamonds</string>
    <string name="playfun_detail_link">details ></string>
    <string name="playfun_txt_exchange_game_coin">exchange</string>
    <string name="playfun_txt_drawings_apply">Withdrawal </string>
    <string name="playfun_btn_game_coin_topup">top up</string>
    <string name="playfun_tab_broadcast_1">My Moments</string>
    <string name="playfun_user_sex_she">She</string>
    <string name="playfun_user_sex_her">Her</string>
    <string name="playfun_user_sex_his">His</string>
    <string name="playfun_user_detail_ta_dynamic">Moments</string>
    <string name="playfun_user_detail_face_verification_pass">Verification of authenticity through facial recognition.</string>
    <string name="playfun_user_detail_is_goddess">Got Queen Verification</string>
    <string name="playfun_user_detail_album_tital">Album</string>
    <string name="playfun_user_detail_album_lock">%s set the album locked.</string>
    <string name="playfun_user_detail_chat_she">Direct message her</string>
    <string name="playfun_user_detail_profile_lock">%1$s set  a limit. To view the profile, you need to ask %2$s for the permission.</string>
    <string name="playfun_user_detail_profile_lock_sended">The request was sent. You will be notified once it is confirmed.</string>
    <string name="playfun_user_detail_paying_user">Paid user.</string>
    <string name="playfun_user_detail_height">Height</string>
    <string name="playfun_user_detail_weight">Weight</string>
    <string name="playfun_user_detail_resident_city">City</string>
    <string name="playfun_user_detail_hope_obj">Expectation</string>
    <string name="playfun_user_detail_self_intro">Self Introduction</string>
    <string name="playfun_user_detail_warn">Any abuse will be banned.</string>
    <string name="playfun_user_detail_btn_apply_check">Request to view</string>
    <string name="playfun_user_detail_social_account">Social Account</string>
    <string name="playfun_user_detail_link_empty">The social account is not filled in.</string>
    <string name="playfun_mine_title_btn_my_evaluation">Impression</string>
    <string name="playfun_mine_age">%s</string>
    <string name="playfun_mine_my_likes">Following</string>
    <string name="playfun_mine_my_visitors_many">Followers</string>
    <string name="playfun_mine_certification_center">Verify Your Profile</string>
    <string name="playfun_mine_my_adoui">My Voice</string>
    <string name="playfun_mine_my_borcast">My Moments</string>
    <string name="playfun_mine_my_album">Photos</string>
    <string name="playfun_mine_upload_photo">Upload photos</string>
    <string name="playfun_mine_upload_photo_or_video">Upload Photos/Videos</string>
    <string name="playfun_mine_album_privacy">Album settings</string>
    <string name="playfun_mine_blacklist">Blocked List</string>
    <string name="playfun_mine_setting">System</string>
    <string name="playfun_mine_me_setting">Personal Settings</string>
    <string name="playfun_mine_apply_invitation_code">Invitation Code</string>
    <string name="playfun_mine_need_help">Feedback</string>
    <string name="playfun_mine_complaint_service">Complain to us</string>
    <string name="playfun_mine_current_version">Current version</string>
    <string name="playfun_mine_once_certification">Verify Now!</string>
    <string name="playfun_member_subscribe_title">VIP Center</string>
    <string name="playfun_photo_album_title_button_text_male">Add Photos</string>
    <string name="playfun_photo_album_title_button_female">Add Photos or Videos</string>
    <string name="playfun_mine_set_redpackage_photo">Paid Photo</string>
    <string name="playfun_mine_burn">Snapshots</string>
    <string name="playfun_mine_burn_recover">Recover</string>
    <string name="playfun_set_red_package_photo_tip">Only one photo can be selected as a paid photo. Others must pay %s diamonds to view it.</string>
    <string name="playfun_mine_burn_total">%s people viewed</string>
    <string name="playfun_mine_once_ertification">Verify now.</string>
    <string name="playfun_chat_action_location">Location</string>
    <string name="playfun_chat_action_burn">Snapshot</string>
    <string name="playfun_chat_action_picture">Photo</string>
    <string name="playfun_chat_action_redpackage">Red packet</string>
    <string name="playfun_chat_action_coin_redpackage">Red packet with diamonds</string>
    <string name="playfun_chat_action_mic">Voice Call</string>
    <string name="playfun_chat_detail_warn">Screenshot/video/side recording of private message content is prohibited.</string>
    <string name="playfun_setting_privacy_setting">Privacy Settings</string>
    <string name="playfun_setting_allow_link_mic">Allow voice call</string>
    <string name="playfun_chat_red">Leave a word</string>
    <string name="playfun_chat_get_red_package">Get the red packet</string>
    <string name="playfun_choose_sex_your_are">I am...</string>
    <string name="playfun_choose_sex_title">Choose my gender</string>
    <string name="playfun_choose_sex_title1">Gender cannot be changed once confirmed.</string>
    <string name="playfun_confirm">Confirm</string>
    <string name="playfun_dialog_agree">Agree</string>
    <string name="playfun_dialog_criterion">Terms of Use</string>
    <string name="playfun_dialog_agreement_check">Tap to view Terms of Services and Privacy Policy</string>
    <string name="playfun_dialog_comment_look">Your comment is only visible to the poster.</string>
    <string name="playfun_send">Send</string>
    <string name="playfun_dialog_choose_sex_warm_content">Gender cannot be changed after signing up.</string>
    <string name="playfun_cancel">Cancel</string>
    <string name="playfun_dialog_choose_city">Select the city</string>
    <string name="playfun_dialog_coin_pay">Pay</string>
    <string name="playfun_dialog_coin_usable_balance">Balance:</string>
    <string name="playfun_dialog_coin_pay_project_name">Payment item</string>
    <string name="playfun_dialog_coin_pay_project">Redeem privileges</string>
    <string name="playfun_dialog_coin_pay_number">Total payment</string>
    <string name="playfun_dialong_coin_rechaege_top_up">Top up</string>
    <string name="playfun_dialong_coin_doing_task">Do tasks</string>
    <string name="playfun_dialog_commit_evaluate_title">Send anonymously</string>
    <string name="playfun_dialog_location_title">Select your city</string>
    <string name="playfun_dialog_location_title1">Meet people nearby</string>
    <string name="playfun_dialog_location_title_sel">City</string>
    <string name="playfun_dialog_location_title_sel_hint">Select</string>
    <string name="playfun_submit">Submit</string>
    <string name="playfun_dialog_commit_evaluate_repor">Please report serious violations</string>
    <string name="playfun_dialog_content_normal_title">Event</string>
    <string name="playfun_dialog_day_choose_on_time">Any time</string>
    <string name="playfun_dialog_my_evaluate_title">Impression</string>
    <string name="playfun_dialog_program_subject_choose_title">Select an event topic</string>
    <string name="playfun_fragment_apply_message_title">Request</string>
    <string name="playfun_mobile_hint">Enter your phone number</string>
    <string name="playfun_code_hint">Verification Code</string>
    <string name="playfun_fragment_blacklist_title">Blocked List</string>
    <string name="playfun_issuance">Post</string>
    <string name="playfun_fragment_broadcast_message_title">Post Notifications</string>
    <string name="playfun_fragment_cash_total_account">Balance</string>
    <string name="playfun_fragment_cash_usable_withdraw">Withdrawable</string>
    <string name="playfun_fragment_cash_withdraw_account">PayPal account</string>
    <string name="playfun_fragment_cash_withdraw_account_bind">Bind PayPal account</string>
    <string name="playfun_fragment_certification_female_title">Real Person Verification</string>
    <string name="playfun_fragment_certification_content">100% bonus increasing for real person verified users.</string>
    <string name="playfun_fragment_certification_tip">You can not withdraw money without real person verification</string>
    <string name="playfun_fragment_certification_female_poster">Double crystals</string>
    <string name="playfun_fragment_certification_female_comment_man">Comment for free</string>
    <string name="playfun_fragment_certification_female_chat_man">Withdrawals</string>
    <string name="playfun_fragment_certification_female_sing_man">Sign up for men\'s events</string>
    <string name="playfun_fragment_certification_female_read_phone">Paid Photos</string>
    <string name="playfun_fragment_certification_female_charge_phone">Paid Album</string>
    <string name="playfun_start_certification">Verify</string>
    <string name="playfun_fragment_certification_male_one">Real person verification through facial recognition</string>
    <string name="playfun_fragment_certification_male_two">Facial recognition is done automatically by the system  in just a few seconds. After successful verification, you can sign up ladies\' events for free.</string>
    <string name="playfun_fragment_change_password_title">Change password</string>
    <string name="playfun_fragment_change_password_forget_password">Forgot password?</string>
    <string name="playfun_fragment_change_password_explain">You need to tie your phone number to set the login password when sign in with third-party accounts.</string>
    <string name="playfun_fragment_change_password_old_password">Old password</string>
    <string name="playfun_fragment_change_password_old_password_hint">Enter your password</string>
    <string name="playfun_fragment_change_password_new_password">New password</string>
    <string name="playfun_fragment_change_password_new_password_hint">Enter your new password, no less than 8 characters</string>
    <string name="playfun_report">Report</string>
    <string name="playfun_add_block">Block</string>
    <string name="playfun_dialog_set_withdraw_account_confirm">Confirm</string>
    <string name="playfun_mine_trace_delike">Sure to unfollow?</string>
    <string name="playfun_dialog_hint_txt1">I have read and agree with</string>
    <string name="playfun_dialog_hint_txt2">Terms of Use</string>
    <string name="playfun_dialog_hint_txt3">Privacy Policy</string>
    <string name="auth_external_login_facebook">FaceBook</string>
    <string name="auth_external_login_google">Google</string>
    <string name="auth_external_login_line">Line</string>
    <string name="auth_external_login_vk">VK</string>
    <string name="auth_external_login_yk">Guest</string>
    <string name="auth_external_login_more">Other login methods </string>
</resources>