<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dl.playfun.ui.mine.changepassword.ChangePasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.dl.playfun.ui.mine.changepassword.ChangePasswordFragment">

        <View
            android:id="@+id/status_bar_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/status_bar_color" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <com.dl.playfun.widget.BasicToolbar
                android:id="@+id/basic_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_height"
                app:toolbar_title="@string/playfun_fragment_change_password_title">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        style="@style/ActionBarMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/playfun_fragment_change_password_forget_password"
                        binding:onClickCommand="@{viewModel.forgotPasswordOnClickCommand}" />
                </RelativeLayout>
            </com.dl.playfun.widget.BasicToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/container_background"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14.3dp"
                android:layout_marginTop="15dp"
                android:text="@string/playfun_fragment_change_password_explain"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:orientation="horizontal"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    style="@style/EditLabel"
                    android:layout_width="66dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/playfun_fragment_change_password_old_password" />

                <EditText
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/playfun_fragment_change_password_old_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:text="@={viewModel.oldPassword}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_background"
                android:orientation="horizontal"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    style="@style/EditLabel"
                    android:layout_width="66dp"
                    android:layout_height="wrap_content"
                    android:text="@string/playfun_fragment_change_password_new_password" />

                <EditText
                    style="@style/EditText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/playfun_fragment_change_password_new_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:text="@={viewModel.newPassword}" />

            </LinearLayout>

            <Button
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:text="@string/playfun_submit"
                binding:onClickCommand="@{viewModel.commitOnClickCommand}" />

        </LinearLayout>

    </LinearLayout>
</layout>