<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_login_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/btn_facebook"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/auth_external_facebook"
                    android:layout_width="48dp"
                    android:layout_height="49dp"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_external_login_facebook"
                    android:textColor="#333333"
                    android:textSize="13sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/auth_external_google"
                    android:layout_width="48dp"
                    android:layout_height="49dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_external_login_google"
                    android:textColor="#333333"
                    android:textSize="13sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/auth_external_line"
                    android:layout_width="48dp"
                    android:layout_height="49dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_external_login_line"
                    android:textColor="#333333"
                    android:textSize="13sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/auth_external_vk"
                    android:layout_width="48dp"
                    android:layout_height="49dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_external_login_vk"
                    android:textColor="#333333"
                    android:textSize="13sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:minHeight="50dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/login_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:padding="6dp"
                android:drawableEnd="@drawable/login_checkbox_button"
                android:button="@null"
                android:checked="true" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/playfun_dialog_hint_txt1"
                    android:textColor="#ff828282"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/text_view1"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/playfun_dialog_hint_txt2"
                    android:textColor="@color/purple"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/text_view2"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/playfun_dialog_hint_txt3"
                    android:textColor="@color/purple"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
            <TextView
                android:id="@+id/btn_yk"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_external_login_yk"
                android:textColor="#ff9f77f7"
                android:textSize="13sp"
                />
            <TextView
                android:id="@+id/btn_more"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_external_login_more"
                android:textColor="#ff9f77f7"
                android:textSize="13sp"
                />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>