<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_marginTop="16dp"
            android:layout_marginStart="19dp"
            android:includeFontPadding="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playfun_cancel"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/playfun_dialog_choose_city"
            android:textColor="#ff282828"
            android:textSize="17sp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_confirm"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="14dp"
            android:layout_alignParentEnd="true"
            android:includeFontPadding="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playfun_face_detect_dialog_btn_sure"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="15dp"
            android:scrollbars="vertical" />
    </RelativeLayout>
</LinearLayout>
