<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_layout"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/playfun_mine_trace_delike"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/text_default"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <Button
                android:id="@+id/cannel"
                android:layout_width="130dp"
                android:layout_height="52dp"
                android:background="@drawable/trace_channel"
                android:scaleType="centerCrop"
                android:text="@string/playfun_cancel"
                android:textColor="@color/purple1"
                android:textSize="14sp" />

            <Button
                android:id="@+id/confirm"
                style="@style/ButtonPrimary"
                android:layout_width="130dp"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:text="@string/playfun_dialog_set_withdraw_account_confirm"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
